--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -2760,7 +2760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regresseion Tree"
+    "## Regression Tree"
    ]
   },
   {
@@ -2785,6 +2785,20 @@
     "test_RMSE = np.sqrt(np.mean(np.abs(test_pred - y_test)**2))\n",
     "print(f'Regression Tree r2: {test_r2}')\n",
     "print(f'Regression Tree RMSE: {test_RMSE}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluating the Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear regresion model used above was much better than the Regression tree model above. The R2 values for each show that the linear regresion model was able to use the training data to explain more of the variation in the test set. Also, the RMSE was higher for the regression tree indicating the Linear Regression model was more accurate. "
    ]
   },
   {
